# SJTUFlowWeb

./: .gitignore  README.md  pyproject.toml
apps/backend/: README.md  main.py
apps/backend/src/sjtuflow/: __init__.py  __main__.py  runtime.py
apps/backend/src/sjtuflow/agent/: approvals.py  briefing.py  loop.py
apps/backend/src/sjtuflow/builtin_skills/announcement-triage/: SKILL.md
apps/backend/src/sjtuflow/builtin_skills/assignment-planning/: SKILL.md
apps/backend/src/sjtuflow/builtin_skills/course-briefing/: SKILL.md
apps/backend/src/sjtuflow/builtin_skills/final-review/: SKILL.md
apps/backend/src/sjtuflow/builtin_skills/lecture-capture/: SKILL.md
apps/backend/src/sjtuflow/cli/: main.py
apps/backend/src/sjtuflow/connectors/: __init__.py
apps/backend/src/sjtuflow/llm/: base.py  mock_provider.py  openai_provider.py
apps/backend/src/sjtuflow/services/: __init__.py  jobs.py  local_app.py
apps/backend/src/sjtuflow/skills/: __init__.py  loader.py
apps/backend/src/sjtuflow/storage/: __init__.py  audit.py  config.py  sessions.py  workspace.py
apps/backend/src/sjtuflow/tools/: __init__.py  canvas.py  filesystem.py  mcp_server.py  media.py  registry.py  skills.py  transcripts.py
apps/backend/src/sjtuflow/utils/: text.py
apps/backend/src/sjtuflow/web/: __init__.py  app.py  server.py
apps/frontend/: README.md  app.js  index.html  package.json  styles.css
docs/: README.md  architecture.md  development-plan.md  platform-integrations.md  project-blueprint.md  workstreams.md
tests/: test_media.py  test_transcripts.py  test_web_app.py
(+6 files in other folders)
